# lefaso-net-scraper

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: build-action.yaml  publish-action.yaml  publish.yaml  test-action.yaml  test.yaml
app/: __init__.py  dataset_manager.py  settings.py
app/lefaso/: __init__.py  scraper.py
lefaso_net_scraper/: __init__.py  settings.py
lefaso_net_scraper/lefaso/: scraper.py
recipes/: get-topic-metadata.py
tests/: test_scraper.py
